--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -87,6 +87,13 @@ impls:
     - 32
     - 64
 - name: "GPU_CSRCSCNoAtomicFused_Reordered_HighFusionRatio"
+  repr: "1v1 no atomic Fused"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
+- name: "GPU_CSRCSCAtomicFused_Reordered_HighFusionRatio"
   repr: "1v1 atomic Fused"
   row_tiles:
     - 8
