--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -79,24 +79,24 @@ impls:
     - 16
     - 32
     - 64
-- name: "GPU_NoAtomicFused_Reordered_HighFusionRatio"
-  repr: "No Atomic Fused + Unfused Packing"
-  row_tiles:
-    - 8
-    - 16
-    - 32
-    - 64
-- name: "GPU_CSRCSCNoAtomicFused_Reordered_HighFusionRatio"
-  repr: "1v1 no atomic Fused"
-  row_tiles:
-    - 8
-    - 16
-    - 32
-    - 64
-- name: "GPU_CSRCSCAtomicFused_Reordered_HighFusionRatio"
-  repr: "1v1 atomic Fused"
-  row_tiles:
-    - 8
-    - 16
-    - 32
-    - 64
+#- name: "GPU_NoAtomicFused_Reordered_HighFusionRatio"
+#  repr: "No Atomic Fused + Unfused Packing"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
+#- name: "GPU_CSRCSCNoAtomicFused_Reordered_HighFusionRatio"
+#  repr: "1v1 no atomic Fused"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
+#- name: "GPU_CSRCSCAtomicFused_Reordered_HighFusionRatio"
+#  repr: "1v1 atomic Fused"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
