--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -8,6 +8,7 @@ impls:
     - 16
     - 32
     - 64
+    - 128
 #- name: "GPU_Unfused_SeqReduceRowCoarsenedStride"
 #  repr: "Unfused Coarsened + Strided Mapping"
 #  row_tiles:
@@ -16,12 +17,13 @@ impls:
 #    - 32
 #    - 64
 - name: "GPU_Fused_Reordered_HighFusionRatio"
-  repr: "Fused + Unfused Packing"
+  repr: "Tile Fused"
   row_tiles:
     - 8
     - 16
     - 32
     - 64
+    - 128
 #- name: "GPU_Fused_ReorderedResultPacked_HighFusionRatio"
 #  repr: "Fused + Unfused/Result Packing"
 #  row_tiles:
@@ -73,12 +75,13 @@ impls:
 #    - 32
 #    - 64
 - name: "GPU_AtomicFused_Reordered_HighFusionRatio"
-  repr: "Atomic Fused + Unfused Packing"
+  repr: "Atomic Tiled Fused"
   row_tiles:
     - 8
     - 16
     - 32
     - 64
+    - 128
 #- name: "GPU_NoAtomicFused_Reordered_HighFusionRatio"
 #  repr: "No Atomic Fused + Unfused Packing"
 #  row_tiles:
@@ -93,10 +96,11 @@ impls:
 #    - 16
 #    - 32
 #    - 64
-#- name: "GPU_CSRCSCAtomicFused_Reordered_HighFusionRatio"
-#  repr: "1v1 atomic Fused"
-#  row_tiles:
-#    - 8
-#    - 16
-#    - 32
-#    - 64
+- name: "GPU_CSRCSCAtomicFused_Reordered_HighFusionRatio"
+  repr: "1v1 Atomic Fused"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
+    - 128
