Add A stationary baseline

--- a/fusion/scripts/plot_gpu/gemm_spmm_tuned.yaml
+++ b/fusion/scripts/plot_gpu/gemm_spmm_tuned.yaml
@@ -3,5 +3,11 @@ impls:
     repr: "Unfused Baseline"
   - name: "GPU_Fused_GeMMSpMM_Demo"
     repr: "GeMM SpMM Fused"
-  - name: "GPU_Fused_SpMMGeMM_Demo"
-    repr: "SpMM GeMM Fused"
+  - name: "GPU_Fused_SpMM1DGeMM_Demo"
+    repr: "SpMM GeMM Fused 1D"
+  - name: "GPU_Fused_SpMM1DSMGeMM_Demo"
+    repr: "SpMM GeMM Fused 1D SM"
+  - name: "GPU_Fused_SpMM2DGeMM_Demo"
+    repr: "SpMM GeMM Fused 2D"
+  - name: "GPU_Fused_SpMM2DGeMM_AStationary_Demo"
+    repr: "SpMM GeMM Fused 2D AS"
